--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,8 @@
+setw -g alternate-screen on
 set-option -g history-limit 1000000
 
 set -g default-terminal "screen-256color"
+set-option -sg escape-time 10
 
 unbind-key C-b
 set-option -g prefix C-Space
@@ -25,13 +27,14 @@ set-window-option -g mode-keys vi
 # Ippsecs send windows magic 
 
 bind-key v command-prompt -p "Join from:"  "join-pane -s '%%'"
-bind-key b command-prompt -p "send to:"  "join-pane -t '%%'"
+bind-key b command-prompt -p "Send to:"  "join-pane -t '%%'"
 
 bind-key -T copy-mode-vi v send-keys -X begin-selection
 bind-key -T copy-mode-vi y send-keys -X copy-selection
 bind-key -T copy-mode-vi r send-keys -X rectangle-toggle
 
 set -g @plugin 'seebi/tmux-colors-solarized'
+
 set -g @colors-solarized 'dark'
 
 set -g @plugin "arcticicestudio/nord-tmux"
@@ -41,3 +44,5 @@ run '~/.tmux/plugins/tpm/tpm'
 set -g default-terminal "tmux-256color"
 set -ga terminal-overrides ",*256col*:Tc"
 
+
+set -g @plugin 'tmux-plugins/tmux-resurrect'
