--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -1,7 +1,7 @@
 # All imports must either be absolute paths starting with `/`, or paths relative
 # to the user's home directory starting with `~/`.
 import:
-  - /home/ex4722/.config/alacritty/solar.yml
+  - /home/ex/.config/alacritty/solar.yml
 
 env:
   TERM: xterm-256color
@@ -27,22 +27,22 @@ scrolling:
 
 font:
   normal:
-    family: 'Hack Nerd Font'
+    family: 'JetBrainsMono Nerd Font'
     style: Regular
 
   bold:
-    family: 'Hack Nerd Font' 
+    family: 'JetBrainsMono Nerd Font Mono' 
     style: Bold
 
   italic:
-    family: 'Hack Nerd Font' 
+    family: 'JetBrainsMono Nerd Font Mono' 
     style: Italic
 
   bold_italic:
-    family: 'Hack Nerd Font' 
+    family: 'JetBrainsMono Nerd Font Mono' 
     style: Bold Italic
 
-  size: 11
+  size: 15
   # Allow terminal applications to change Alacritty's window title.
 
   # Window class (Linux/BSD only):
